crates/hexray/tests/snapshots/snapshot_tests__cfg_dot.snap
---
source: crates/hexray/tests/snapshot_tests.rs
expression: normalized
---
digraph "_main" {
    rankdir=TB;
    node [shape=box, fontname="Courier", fontsize=10];
    edge [fontname="Courier", fontsize=9];

    "bb0" [label="bb0:\l[[ADDR] - [ADDR])\l\l[ADDR]:  ff 83 00 d1              sub sp, sp, 0x20\l[ADDR]:  fd 7b 01 a9              stp x29, x30, [sp + 0x10]\l[ADDR]:  fd 43 00 91              add x29, sp, 0x10\l[ADDR]:  bf c3 1f b8              stur wzr, [x29 - 0x4]\l[ADDR]:  a0 00 80 52              mov w0, 0x5\l[ADDR]:  b7 ff ff 97              bl [ADDR]\l"];
    "bb1" [label="bb1:\l[[ADDR] - [ADDR])\l\l[ADDR]:  e0 0b 00 b9              str w0, [sp + 0x8]\l[ADDR]:  40 01 80 52              mov w0, 0xa\l[ADDR]:  cb ff ff 97              bl [ADDR]\l"];
    "bb2" [label="bb2:\l[[ADDR] - [ADDR])\l\l[ADDR]:  e0 07 00 b9              str w0, [sp + 0x4]\l[ADDR]:  e0 00 80 52              mov w0, 0x7\l[ADDR]:  dd ff ff 97              bl [ADDR]\l"];
    "bb3" [label="bb3:\l[[ADDR] - [ADDR])\l\l[ADDR]:  e0 03 00 b9              str w0, [sp]\l[ADDR]:  e8 0b 40 b9              ldr w8, [sp + 0x8]\l[ADDR]:  e9 07 40 b9              ldr w9, [sp + 0x4]\l[ADDR]:  08 01 09 0b              add w8, w8, w9\l[ADDR]:  e9 03 40 b9              ldr w9, [sp]\l[ADDR]:  00 01 09 0b              add w0, w8, w9\l[ADDR]:  fd 7b 41 a9              ldp x29, x30, [sp + 0x10]\l[ADDR]:  ff 83 00 91              add sp, sp, 0x20\l[ADDR]:  c0 03 5f d6              ret\l"];

    "bb0" -> "bb1";
    "bb1" -> "bb2";
    "bb2" -> "bb3";
}
