crates/hexray/tests/snapshots/snapshot_tests__decompile_with_addresses.snap
---
source: crates/hexray/tests/snapshot_tests.rs
assertion_line: 337
expression: normalized
---
(auto-selected 'main' at [ADDR])

Decompiling _main at [ADDR]

int32_t _main(void)
{
    int local_4;
    int ret;
    int var_0;

    // bb0 [[ADDR]..[ADDR]]
    // bb1 [[ADDR]..[ADDR]]
    ret = _factorial(5);
    // bb2 [[ADDR]..[ADDR]]
    local_4 = _sum_while(10);
    // bb3 [[ADDR]..[ADDR]]
    var_0 = _conditional(7);
    return ret + local_4 + var_0;
}
