crates/hexray/tests/snapshots/snapshot_tests__info_elf.snap
---
source: crates/hexray/tests/snapshot_tests.rs
assertion_line: 215
expression: normalized
---
Binary Information
==================
Format:        ELF
Architecture:  x86_64
Endianness:    Little
Bitness:       Bits64
Type:          Executable
Machine:       X86_64
Entry Point:   0x401000

Sections:      0
Segments:      1

Symbols:       0
