crates/hexray/tests/snapshots/snapshot_tests__info_macho.snap
---
source: crates/hexray/tests/snapshot_tests.rs
assertion_line: 230
expression: normalized
---
Binary Information
==================
Format:        Mach-O
Architecture:  x86_64
Endianness:    Little
Bitness:       Bits64
Type:          Execute
CPU Type:      X86_64
Entry Point:   [ADDR]

Segments:      3
Load Commands: 15

Load Commands:
  LC_SEGMENT_64            72 bytes
  LC_SEGMENT_64            232 bytes
  LC_SEGMENT_64            72 bytes
  LC_DYLD_CHAINED_FIXUPS   16 bytes
  LC_DYLD_EXPORTS_TRIE     16 bytes
  LC_SYMTAB                24 bytes
  LC_DYSYMTAB              80 bytes
  LC_LOAD_DYLINKER         32 bytes
  LC_UUID                  24 bytes
  LC_BUILD_VERSION         32 bytes
  LC_SOURCE_VERSION        16 bytes
  LC_MAIN                  24 bytes
  LC_LOAD_DYLIB            56 bytes
  LC_FUNCTION_STARTS       16 bytes
  LC_DATA_IN_CODE          16 bytes

Segments:
  __PAGEZERO       [ADDR] - [ADDR] (0 sections)
  __TEXT           [ADDR] - [ADDR] (2 sections)
  __LINKEDIT       [ADDR] - [ADDR] (0 sections)

Symbols:       5
